  integers instead of a string.  Based on patch by Guilherme Polo.

- Issue #10197: Rework subprocess.get[status]output to use subprocess
  functionality and thus to work on Windows. Patch by Nick Coghlan.

- Issue #19286: Directories in ``package_data`` are no longer added to
  the filelist, preventing failure outlined in the ticket.

Tests
-----

- Issue #19440: Clean up test_capi by removing an unnecessary __future__
  import, converting from test_main to unittest.main, and running the
  _testcapi module tests within a unittest TestCase.

- Issue #18702: All skipped tests now reported as skipped.

- Issue #19085: Added basic tests for all tkinter widget options.

Build
-----


What's New in Python 3.3.3?
===========================

*Release date: 17-Nov-2013*

No changes from release candidate 2.


What's New in Python 3.3.3 release candidate 2?
===============================================

*Release date: 11-Nov-2013*

Library
-------

- Issue #19227: Any re-seeding of the OpenSSL RNG on fork has been removed;
  this should be handled by OpenSSL itself or by the application.

- Issue #19435: Fix directory traversal attack on CGIHttpRequestHandler.

Tests
-----

- Issue #18964: Fix test_tcl when run with Tcl/Tk versions  < 8.5.

Build
-----

- Issue #15663: Revert OS X installer built-in Tcl/Tk support for 3.3.3.
  Some third-party projects, such as Matplotlib and PIL/Pillow,
  depended on being able to build with Tcl and Tk frameworks in
  /Library/Frameworks.


What's New in Python 3.3.3 release candidate 1?
===============================================

*Release date: 27-Oct-2013*

Core and Builtins
-----------------

- Issue #18603: Ensure that PyOS_mystricmp and PyOS_mystrnicmp are in the
  Python executable and not removed by the linker's optimizer.

- Issue #19279: UTF-7 decoder no more produces illegal strings.

- Fix macro expansion of _PyErr_OCCURRED(), and make sure to use it in at
  least one place so as to avoid regressions.
